# cpp_header_guard

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  .pylintrc  AGENTS.md  README.md  header_guard.py  mypy.ini  pyproject.toml  requirements-test.txt
.github/workflows/: pre-commit.yml
scripts/: hatch-python-module.sh
src/header_guard/: __init__.py  cli.py  core.py
tests/: conftest.py  test_header_guard.py  test_system_pre_commit.py
